# R2R

./: .gitignore  README.md  make_subsets.py  pyproject.toml  setup_env.sh  todo.md
config/: DeepSeek-R1-Distill-Qwen-1.5B+DeepSeek-R1-Distill-Qwen-32B.yaml  DeepSeek-R1-Distill-Qwen-1.5B+DeepSeek-R1-Distill-Qwen-32B_aleatoric.yaml  DeepSeek-R1-Distill-Qwen-1.5B+DeepSeek-R1-Distill-Qwen-32B_entropy.yaml  Qwen3-0.6B+Qwen3-30B-A3BB.yaml  Qwen3-0.6B+Qwen3-32B.yaml  Qwen3-0.6B+Qwen3-8B.yaml  Qwen3-1.7B+Qwen3-8B.yaml  Qwen3-4B+Qwen3-8B.yaml
r2r/data/: README.md  data_gen_sglang.py  data_process.py  generation_controller.py  generation_controller_api.py  live_labeler.py  verify_model.py
r2r/data/utils/: convert_eos_tokens.py
r2r/evaluate/: codegen_metrics.py  eval_utils.py  extract_livecodebench_answer.py
r2r/models/: __init__.py  dynamic_sglang_selector.py  dynamic_sglang_selector_opt.py  dynamic_sglang_selector_simple.py  http_server.py  recorder.py  router.py  sglang_wrapper.py
r2r/models/batch_inference/: flashinfer_cuda_graph.py  http_server.py  llm_cuda_graph_runner.py  llm_model_runner.py  llm_scheduler.py  llm_server.py  llm_tp_worker.py  patch.py  schedule_batch.py  schedule_req.py  sl_disaggregation_system.py  slm_server.py
r2r/models/sglang_patch/: flashinfer_cuda_graph.py  llm_cuda_graph_runner.py  llm_model_runner.py  llm_scheduler.py  llm_server.py  llm_tp_worker.py  patch.py  schedule_req.py  scheduler.py  slm_server.py  (+2 more)
r2r/train/: logger.py  loss.py  optimizer.py
r2r/utils/: config.py  dataclass.py  dataset_conversion.py  metrics.py  model_configs.json  sampling.py  switching.py  token_manager.py
resource/: default_training_config.json  default_training_config_qwen3_0_6b.json  default_training_config_qwen3_1_7b.json  default_training_config_qwen3_4b.json  default_training_config_qwen_r1.json
script/data_labeling/: auto_scheduler.py  data_generation.py  init_dataset_conversion.py  run_pipeline_scripts.md  step_0_llm_response.py  step_0_llm_response_api.py  step_1_slm_prefill.py  step_2_llm_continuation.py  step_3_verify.py  step_4_construct_label_dataset.py  support_dataset_config.json
script/data_labeling_api/: run_pipeline_scripts.md  step_0_llm_response.py  step_2_llm_continuation.py
script/evaluate/: hf_dataset_sglang.py  hf_dataset_sglang_server.py
script/inference/: interactive_chat.py  launch_base_model_server.py  launch_r2r_server.py
script/playground/: README_AUTO_SCHEDULER.md  generate_job_scripts.py  gradio_demo.py  interactive_chat.py  launch_llm_continuation_multi_node.py  simple_req.py  speed_benchmark.py
script/train/: train_router.py  train_router_param_search.py
script/utils/: generate_pipeline_scripts.py
test/: input_text.txt  test_dynamic_simple_sglang_selector.py  test_http_openai_chat_completion.py  test_http_openai_client.py  test_http_server.py  test_http_server_health.py  test_speed.py  test_speed.sh  test_speed_comparison.py  test_system.py
(+16 files in other folders)
