[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r2r"
version = "0.1.0"
description = "R2R routes between small and large language models at token level for efficient reasoning"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.10"
dependencies = [
    "torch==2.8.0",
    "torchao==0.9.0",
    "transformers==4.55.2",
    "sglang[all]==0.5.1",
    "accelerate",
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "pydantic>=2.12.4",
    "xgrammar",
    "scikit-learn",
    "setproctitle",
    "gradio",
    "nvidia-ml-py"
]

[tool.uv]
override-dependencies = [
    "sgl-kernel==0.3.8"
]

[project.optional-dependencies]
train = [
    "jieba==0.42.1", 
    "nltk==3.9.1", 
    "wandb"
]
evaluate = [
    "psutil",
    "packaging"
]
dev = [
    "datasets>=2.20.0",
    "PyYAML",
    "uvicorn",
    "openai",
    "requests"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["r2r"]
exclude = ["tests*", "scripts*"]
